Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.5.3
-
Fix Version/s: 10.5.4
-
Component/s: Storage Engine - InnoDB
-
Labels:None
Description
main/ML_101.test (The content does not matter.)
|
--source include/have_innodb.inc
|
CREATE TABLE t1 (col1 INT) ENGINE = InnoDB;
|
DROP TABLE t1;
|
|
./mysql-test-run.pl --mem --mysqld=--innodb_page_size=64K --mysqld=--innodb_log_file_size=5000000 --mysqld=--innodb_buffer_pool_size=24M --record --mysqld=--default_storage_engine=innodb ML_101
|
fails during bootstrap.
|
|
...
|
2020-04-21 15:36:40 0 [Note] InnoDB: innodb_page_size=65536
|
2020-04-21 15:36:40 0 [Note] InnoDB: Using Linux native AIO
|
2020-04-21 15:36:40 0 [Note] InnoDB: The first innodb_system data file 'ibdata1' did not exist. A new tablespace will be created!
|
2020-04-21 15:36:40 0 [Note] InnoDB: !!!!!!!! UNIV_DEBUG switched on !!!!!!!!!
|
2020-04-21 15:36:40 0 [Note] InnoDB: Mutexes and rw_locks use GCC atomic builtins
|
2020-04-21 15:36:40 0 [Note] InnoDB: Uses event mutexes
|
2020-04-21 15:36:40 0 [Note] InnoDB: Compressed tables use zlib 1.2.11
|
2020-04-21 15:36:40 0 [Note] InnoDB: Number of pools: 1
|
2020-04-21 15:36:40 0 [Note] InnoDB: Using SSE2 crc32 instructions
|
2020-04-21 15:36:40 0 [Note] mariadbd: O_TMPFILE is not supported on /home/mleich/Server_bin/10.5_debug/mysql-test/var/tmp/ (disabling future attempts)
|
2020-04-21 15:36:40 0 [Note] InnoDB: Initializing buffer pool, total size = 25165824, chunk size = 25165824
|
2020-04-21 15:36:40 0 [Note] InnoDB: Completed initialization of buffer pool
|
2020-04-21 15:36:40 0 [Note] InnoDB: If the mysqld execution user is authorized, page cleaner thread priority can be changed. See the man page of setpriority().
|
2020-04-21 15:36:40 0 [Note] InnoDB: Setting file './ibdata1' size to 12 MB. Physically writing the file full; Please wait ...
|
2020-04-21 15:36:40 0 [Note] InnoDB: File './ibdata1' size is now 12 MB.
|
2020-04-21 15:36:40 0 [Note] InnoDB: Setting log file ./ib_logfile101 size to 4980736 bytes
|
2020-04-21 15:36:40 0 [ERROR] InnoDB: Cannot continue operation. ib_logfile0 is too small for innodb_thread_concurrency=0. The size of ib_logfile0 should be bigger than 200 kB * innodb_thread_concurrency. Please refer to https://mariadb.com/kb/en/library/innodb-system-variables/
|
<== I am aware that there might be reasons why some action is impossible.
|
But the justification for the abort is not acceptable.
|
origin/10.5 2f7d91bb6ce7bb34dd644e30590189bce37fb8f1 2020-04-14T18:43:03+03:00
|
|
In addition the same test worked well on actual
|
- 10.1, 10.2, 10.4, 10.4 (64K page size + innodb_log_file_size=5000000)
|
- even 10.5 but only with
|
- 64K pagesize + innodb_log_file_size=8000000 or higher
|
- 32K pagesize + even the small innodb_log_file_size=5000000
|
|
|
Attachments
Issue Links
- relates to
-
MDEV-14462 Confusing error message: ib_logfiles are too small for innodb_thread_concurrency=0
-
- Closed
-